[gd_scene load_steps=3 format=2]

[ext_resource path="res://example/events.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/theme.tres" type="Theme" id=2]

[node name="Events" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LabelTitle" type="Label" parent="VBoxContainer"]
margin_right = 720.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Events"
align = 1
valign = 1

[node name="LineEditEventsOutput" type="LineEdit" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 720.0
margin_bottom = 252.0
size_flags_horizontal = 3
size_flags_vertical = 3
align = 1
virtual_keyboard_enabled = false
placeholder_text = "Output"
caret_blink = true
caret_blink_speed = 0.5

[node name="LabelEndpoints" type="Label" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 720.0
margin_bottom = 381.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Endpoints"
align = 1
valign = 2

[node name="ButtonIncrementEvent" type="Button" parent="VBoxContainer"]
margin_top = 385.0
margin_right = 720.0
margin_bottom = 509.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Increment Event (EvId, Amount)"
expand_icon = true

[node name="ButtonLoadEvents" type="Button" parent="VBoxContainer"]
margin_top = 513.0
margin_right = 720.0
margin_bottom = 638.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Events (ForceReload)"
expand_icon = true

[node name="ButtonLoadEventsByIds" type="Button" parent="VBoxContainer"]
margin_top = 642.0
margin_right = 720.0
margin_bottom = 766.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
enabled_focus_mode = 0
text = "Load Events By Ids (ForceReload, EvIds)"
expand_icon = true

[node name="LabelParameters" type="Label" parent="VBoxContainer"]
margin_top = 770.0
margin_right = 720.0
margin_bottom = 894.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Parameters"
align = 1
valign = 2

[node name="LineEditEventId" type="LineEdit" parent="VBoxContainer"]
margin_top = 898.0
margin_right = 720.0
margin_bottom = 1023.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "CgkIy_Lnrp4ZEAIQDQ"
align = 1
placeholder_text = "Event Id (EvId)"
caret_blink = true
caret_blink_speed = 0.5

[node name="SpinBoxEventsAmount" type="SpinBox" parent="VBoxContainer"]
margin_top = 1027.0
margin_right = 720.0
margin_bottom = 1151.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 1000.0
value = 1.0
rounded = true
align = 1
prefix = "Amount"

[node name="CheckButtonEventsForceReload" type="CheckButton" parent="VBoxContainer"]
margin_top = 1155.0
margin_right = 720.0
margin_bottom = 1280.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "Force Reload"
align = 1

[connection signal="pressed" from="VBoxContainer/ButtonIncrementEvent" to="." method="_on_ButtonIncrementEvent_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadEvents" to="." method="_on_ButtonLoadEvents_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonLoadEventsByIds" to="." method="_on_ButtonLoadEventsByIds_pressed"]
